C/include/codata_constants_2014.h

ADD_IMPORT const struct codata_constant_type BOHR_MAGNETON_IN_INVERSE_METERS_PER_TESLA_2014;
ADD_IMPORT const struct codata_constant_type BOHR_MAGNETON_IN_K_T_2014;
ADD_IMPORT const struct codata_constant_type BOHR_RADIUS_2014;
ADD_IMPORT const struct codata_constant_type BOLTZMANN_CONSTANT_2014;
ADD_IMPORT const struct codata_constant_type BOLTZMANN_CONSTANT_IN_EV_K_2014;
ADD_IMPORT const struct codata_constant_type BOLTZMANN_CONSTANT_IN_HZ_K_2014;
ADD_IMPORT const struct codata_constant_type BOLTZMANN_CONSTANT_IN_INVERSE_METERS_PER_KELVIN_2014;
ADD_IMPORT const struct codata_constant_type CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2014;
ADD_IMPORT const struct codata_constant_type CLASSICAL_ELECTRON_RADIUS_2014;
ADD_IMPORT const struct codata_constant_type COMPTON_WAVELENGTH_2014;
ADD_IMPORT const struct codata_constant_type COMPTON_WAVELENGTH_OVER_2_PI_2014;
ADD_IMPORT const struct codata_constant_type CONDUCTANCE_QUANTUM_2014;
ADD_IMPORT const struct codata_constant_type CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2014;
ADD_IMPORT const struct codata_constant_type CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2014;
ADD_IMPORT const struct codata_constant_type CU_X_UNIT_2014;