src/codata_constants_2014_capi.f90


type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_INVERSE_METERS_PER_TESLA_2014") ::&
capi_46_2014 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "i", "n", "v", &
"e", "r", "s", "e", " ", "m", "e", "t", "e", "r", &
"s", " ", "p", "e", "r", " ", "t", "e", "s", "l", &
"a", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_INVERSE_METERS_PER_TESLA_2014%value, &
BOHR_MAGNETON_IN_INVERSE_METERS_PER_TESLA_2014%uncertainty, &
[ &
"m", "^", "-", "1", " ", "T", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_K_T_2014") ::&
capi_47_2014 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "K", "/", "T", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_K_T_2014%value, &
BOHR_MAGNETON_IN_K_T_2014%uncertainty, &
[ &
"K", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_RADIUS_2014") ::&
capi_48_2014 = capi_constant_type([ &
"B", "o", "h", "r", " ", "r", "a", "d", "i", "u", &
"s", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_RADIUS_2014%value, &
BOHR_RADIUS_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_2014") ::&
capi_49_2014 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_2014%value, &
BOLTZMANN_CONSTANT_2014%uncertainty, &
[ &
"J", " ", "K", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_EV_K_2014") ::&
capi_50_2014 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "e", "V", "/", "K", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_EV_K_2014%value, &
BOLTZMANN_CONSTANT_IN_EV_K_2014%uncertainty, &
[ &
"e", "V", " ", "K", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_HZ_K_2014") ::&
capi_51_2014 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "H", "z", "/", "K", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_HZ_K_2014%value, &
BOLTZMANN_CONSTANT_IN_HZ_K_2014%uncertainty, &
[ &
"H", "z", " ", "K", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOLTZMANN_CONSTANT_IN_INVERSE_METERS_PER_KELVIN_2014") ::&
capi_52_2014 = capi_constant_type([ &
"B", "o", "l", "t", "z", "m", "a", "n", "n", " ", &
"c", "o", "n", "s", "t", "a", "n", "t", " ", "i", &
"n", " ", "i", "n", "v", "e", "r", "s", "e", " ", &
"m", "e", "t", "e", "r", "s", " ", "p", "e", "r", &
" ", "k", "e", "l", "v", "i", "n", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOLTZMANN_CONSTANT_IN_INVERSE_METERS_PER_KELVIN_2014%value, &
BOLTZMANN_CONSTANT_IN_INVERSE_METERS_PER_KELVIN_2014%uncertainty, &
[ &
"m", "^", "-", "1", " ", "K", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2014") ::&
capi_53_2014 = capi_constant_type([ &
"c", "h", "a", "r", "a", "c", "t", "e", "r", "i", &
"s", "t", "i", "c", " ", "i", "m", "p", "e", "d", &
"a", "n", "c", "e", " ", "o", "f", " ", "v", "a", &
"c", "u", "u", "m", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2014%value, &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2014%uncertainty, &
[ &
"o", "h", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CLASSICAL_ELECTRON_RADIUS_2014") ::&
capi_54_2014 = capi_constant_type([ &
"c", "l", "a", "s", "s", "i", "c", "a", "l", " ", &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "r", &
"a", "d", "i", "u", "s", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CLASSICAL_ELECTRON_RADIUS_2014%value, &
CLASSICAL_ELECTRON_RADIUS_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="COMPTON_WAVELENGTH_2014") ::&
capi_55_2014 = capi_constant_type([ &
"C", "o", "m", "p", "t", "o", "n", " ", "w", "a", &
"v", "e", "l", "e", "n", "g", "t", "h", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
COMPTON_WAVELENGTH_2014%value, &
COMPTON_WAVELENGTH_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="COMPTON_WAVELENGTH_OVER_2_PI_2014") ::&
capi_56_2014 = capi_constant_type([ &
"C", "o", "m", "p", "t", "o", "n", " ", "w", "a", &
"v", "e", "l", "e", "n", "g", "t", "h", " ", "o", &
"v", "e", "r", " ", "2", " ", "p", "i", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
COMPTON_WAVELENGTH_OVER_2_PI_2014%value, &
COMPTON_WAVELENGTH_OVER_2_PI_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONDUCTANCE_QUANTUM_2014") ::&
capi_57_2014 = capi_constant_type([ &
"c", "o", "n", "d", "u", "c", "t", "a", "n", "c", &
"e", " ", "q", "u", "a", "n", "t", "u", "m", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONDUCTANCE_QUANTUM_2014%value, &
CONDUCTANCE_QUANTUM_2014%uncertainty, &
[ &
"S", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2014") ::&
capi_58_2014 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "J", "o", "s", "e", "p", "h", "s", "o", &
"n", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2014%value, &
CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2014%uncertainty, &
[ &
"H", "z", " ", "V", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2014") ::&
capi_59_2014 = capi_constant_type([ &
"c", "o", "n", "v", "e", "n", "t", "i", "o", "n", &
"a", "l", " ", "v", "a", "l", "u", "e", " ", "o", &
"f", " ", "v", "o", "n", " ", "K", "l", "i", "t", &
"z", "i", "n", "g", " ", "c", "o", "n", "s", "t", &
"a", "n", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2014%value, &
CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2014%uncertainty, &
[ &
"o", "h", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="CU_X_UNIT_2014") ::&
capi_60_2014 = capi_constant_type([ &
"C", "u", " ", "x", " ", "u", "n", "i", "t", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
CU_X_UNIT_2014%value, &
CU_X_UNIT_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
